--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@reduxjs/toolkit": "^2.5.0",
     "@rollup/plugin-alias": "^5.1.1",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
@@ -29,6 +30,7 @@
     "react-avatar": "^5.0.3",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
     "react-select": "^5.9.0",
     "react-spinners": "^0.15.0",
