--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-avatar": "^5.0.3",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
